--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,12 @@
     "dayjs": "^1.10.4",
     "eslint-config-prettier": "^7.2.0",
     "immer": "^8.0.1",
-    "node-sass": "^4.14.1",
+    "sass": "^1.49.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "react-transition-group": "^4.4.1",
     "typescript": "~4.1.3"
   },
