--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
   },
   "imports": {
     "@david/dax": "jsr:@david/dax@^0.41.0",
+    "@jersou/clite": "jsr:@jersou/clite@^0.7.4",
     "@oak/oak": "jsr:@oak/oak@^17.0.0",
     "@std/assert": "jsr:@std/assert@^1.0.4",
     "@std/async": "jsr:@std/async@^1.0.5",
