--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,5 +16,9 @@
     "jsx": "react-jsx",
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "**/*.stories.ts",
+    "**/*.stories.tsx"
+  ]
 }
