--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,8 +17,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": [
-    "**/*.stories.ts",
-    "**/*.stories.tsx"
-  ]
+  "exclude": ["**/*.stories.ts", "**/*.stories.tsx"]
 }
